--- a/NatMeK_ProySBC/NatMeK_ProySBC/My Project/Resources.resx
+++ b/NatMeK_ProySBC/NatMeK_ProySBC/My Project/Resources.resx
@@ -121,13 +121,16 @@
   <data name="imageninicio" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imageninicio.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="achiote" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\achiote.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="achiote2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\achiote2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="achiote" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\achiote.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="achiote21" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\achiote2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sabila" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sabila1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
